; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_async_state_change.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_async_state_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at86rf230_local = type { i32 }
%struct.at86rf230_state_change = type { void (i8*)*, i32 }

@RG_TRX_STATUS = common dso_local global i32 0, align 4
@at86rf230_async_state_change_start = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.at86rf230_local*, %struct.at86rf230_state_change*, i32, void (i8*)*)* @at86rf230_async_state_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @at86rf230_async_state_change(%struct.at86rf230_local* %0, %struct.at86rf230_state_change* %1, i32 %2, void (i8*)* %3) #0 {
  %5 = alloca %struct.at86rf230_local*, align 8
  %6 = alloca %struct.at86rf230_state_change*, align 8
  %7 = alloca i32, align 4
  %8 = alloca void (i8*)*, align 8
  store %struct.at86rf230_local* %0, %struct.at86rf230_local** %5, align 8
  store %struct.at86rf230_state_change* %1, %struct.at86rf230_state_change** %6, align 8
  store i32 %2, i32* %7, align 4
  store void (i8*)* %3, void (i8*)** %8, align 8
  %9 = load i32, i32* %7, align 4
  %10 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %6, align 8
  %11 = getelementptr inbounds %struct.at86rf230_state_change, %struct.at86rf230_state_change* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 8
  %12 = load void (i8*)*, void (i8*)** %8, align 8
  %13 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %6, align 8
  %14 = getelementptr inbounds %struct.at86rf230_state_change, %struct.at86rf230_state_change* %13, i32 0, i32 0
  store void (i8*)* %12, void (i8*)** %14, align 8
  %15 = load %struct.at86rf230_local*, %struct.at86rf230_local** %5, align 8
  %16 = load i32, i32* @RG_TRX_STATUS, align 4
  %17 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %6, align 8
  %18 = load i32, i32* @at86rf230_async_state_change_start, align 4
  %19 = call i32 @at86rf230_async_read_reg(%struct.at86rf230_local* %15, i32 %16, %struct.at86rf230_state_change* %17, i32 %18)
  ret void
}

declare dso_local i32 @at86rf230_async_read_reg(%struct.at86rf230_local*, i32, %struct.at86rf230_state_change*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
